--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-register": "^6.26.0",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
+    "front-matter": "^2.3.0",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
@@ -48,6 +49,7 @@
     "gulp-front-matter": "^1.3.0",
     "gulp-image": "^4.3.0",
     "gulp-marked": "^1.0.0",
+    "gulp-newer": "^1.4.0",
     "gulp-nunjucks": "^4.0.0",
     "gulp-nunjucks-render": "^2.2.2",
     "gulp-rename": "^1.2.3",
@@ -55,6 +57,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "marked": "^0.4.0",
+    "moment": "^2.22.2",
     "nunjucks": "^3.1.3",
     "nunjucks-markdown": "^2.0.1",
     "vinyl-buffer": "^1.0.1",
