--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "dependencies": {
     "foundation-sites": "^6.4.4-rc1",
+    "highlight.js": "^9.12.0",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.0"
   }
